# rcds

./: .gitignore  pyproject.toml
docs/: challenge.rst  config-samples.rst  project.rst
docs/backends/: index.rst
docs/backends/instancer/: index.rst
docs/backends/k8s/: index.rst
rcds/backend/: backend.py
rcds/backends/instancer/: backend.py  options.schema.yaml
rcds/backends/k8s/: backend.py  manifests.py  options.schema.yaml
rcds/backends/k8s/templates/: deployment.yaml  ingress.yaml  service.yaml  sysconfig-daemonset.yaml  sysconfig-seccomp-configmap.yaml
rcds/backends/rctf/: backend.py
rcds/challenge/: challenge.py  challenge.schema.yaml  config.py  docker.py
rcds/cli/: __main__.py  deploy.py
rcds/project/: project.py  rcds.schema.yaml
tests/: test_backend_switching.py
tests/challenge/: test_docker.py
