[tool.poetry]
name = "rcds"
version = "0.2.0"
description = "An automated CTF challenge deployment tool, modified for ACM Cyber"
readme = "README.rst"
authors = ["ACM Cyber <uclacyber+rcds@acmcyber.com>", "redpwn <contact@redpwn.net>"]
homepage = "https://github.com/pbrucla/rcds"
repository = "https://github.com/pbrucla/rcds"
license = "BSD-3-Clause"
packages = [
    { include = "rcds" },
]

[tool.poetry.scripts]
rcds = "rcds.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
pathspec = "^0.8.1"
docker = "^7.1.0"
jsonschema = "^3.2.0"
Jinja2 = "^3.1.2"
kubernetes = "~24.2.0"
requests = "^2.24.0"
requests-toolbelt = "^1.0.0"
click = "^7.1.2"
pycryptodome = "^3.20.0"

# Docs build dependencies
sphinx = { version = "^3.3.0", optional = true }
sphinx_rtd_theme = { version = "^0.5.0", optional = true }
sphinx-jsonschema = { version = "^1.15", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = { version = "^2.12.1", python = "^3.6.1" }
black = "^20.8b1"
pytest = "^6.2.3"
coverage = "^5.5"
mypy = "^0.812"
flake8 = "^3.9.0"
flake8-bugbear = "^21.4.3"
pytest-datadir = "^1.3.1"
isort = "^5.8.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "sphinx-jsonschema"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
